# browniebroke-utils

./: .all-contributorsrc  .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  commitlint.config.mjs  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  hacktoberfest.yml  poetry-upgrade.yml  upgrader.yml
src/browniebroke_utils/: linkify_github_markdown.py  setup_prettier.py  setup_pywatchers.py
src/browniebroke_utils/templates/ruffwatcher/: watchers.xml
templates/: .changelog-old.md  CHANGELOG.md.j2
tests/: test_linkify_github_markdown.py  test_main.py  test_setup_prettier.py  test_setup_pywatchers.py
