[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=77.0.3" ]

[project]
name = "browniebroke-utils"
version = "1.5.0"
description = "A collections of small scripts."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Bruno Alla", email = "alla.brunoo@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "xmltodict>=1,<2",
]
urls."Bug Tracker" = "https://github.com/browniebroke/browniebroke-utils/issues"
urls.Changelog = "https://github.com/browniebroke/browniebroke-utils/blob/main/CHANGELOG.md"
urls.Mastodon = "https://fosstodon.org/@browniebroke"
urls.repository = "https://github.com/browniebroke/browniebroke-utils"
urls.Twitter = "https://twitter.com/_BrunoAlla"
scripts.linkify-gh-md = "browniebroke_utils.linkify_github_markdown:main"
scripts.pych-prettier = "browniebroke_utils.setup_prettier:main"
scripts.pych-pywatchers = "browniebroke_utils.setup_pywatchers:main"
scripts.pych-ruff = "browniebroke_utils.setup_ruffwatcher:main"

[dependency-groups]
dev = [
  "pyfakefs==6.*",
  "pytest==9.*",
  "pytest-cov",
  "ty==0.0.*",
]

[tool.ruff]
line-length = 88
lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "E",   # pycodestyle
  "F",   # pyflake
  "I",   # isort
  "RUF", # ruff specific
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D401", # First line of docstring should be in imperative mood
]
lint.per-file-ignores."setup.py" = [ "D100" ]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
]
lint.isort.known-first-party = [ "browniebroke_utils", "tests" ]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest]
minversion = "9.0"
addopts = [ "-v", "-Wonce", "--cov=browniebroke_utils" ]
pythonpath = [ "src" ]

[tool.coverage]
run.branch = true
report.exclude_lines = [
  "@overload",
  "if TYPE_CHECKING",
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [
  "src/browniebroke_utils/__init__.py:__version__",
]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""
branches.main.match = "main"
branches.noop.match = "(?!main$)"
branches.noop.prerelease = true
changelog.exclude_commit_patterns = [
  "chore.*",
  "ci.*",
  "Merge pull request .*",
]
changelog.environment.keep_trailing_newline = true
